Modify Base64 encoder to utilize the Java8 version